[package]
name = "energy-monitor"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "EnergyMonitor trait"
license = "MIT"
homepage = "https://github.com/connorimes/energy-monitor-rs"
repository = "https://github.com/connorimes/energy-monitor-rs"
keywords = ["energy", "monitor", "trait"]
