[package]
name = "energy-monitor"
version = "0.2.1"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "EnergyMonitor trait"
license = "MIT/Apache-2.0"
homepage = "https://github.com/energymon/energy-monitor-rs"
repository = "https://github.com/energymon/energy-monitor-rs"
keywords = ["energy", "monitor", "trait"]
